--- a/public/css/command.css
+++ b/public/css/command.css
@@ -304,3 +304,253 @@ p {
   line-height: 28px;
   color: #ffffff;
 }
+
+/* Footer section */
+.footer_frame {
+  position: relative;
+  padding: 90px 0px 20px 0px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: #f3f5f6;
+}
+
+.footer_frame .footer_spec_title {
+  margin-bottom: 30px;
+  color:  #041e42;
+  font-family: "Jost";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.footer_frame .container {
+  flex-direction: column;
+}
+
+.footer_frame .container .footer_top {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_top .footer_contact_box {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contact_box .footer_contact_main {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_contact_main img {
+  position: relative;
+  margin-right: 30px;
+  top: 5px;
+  width: 35px;
+  height: 30px;
+}
+
+.footer_frame .footer_contact_main div {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_contact_main div strong {
+  margin-bottom: 10px;
+  color: #041e42;
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.footer_frame .footer_contact_main div strong {
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.footer_frame .footer_contact_main div span {
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.footer_frame .footer_service_box {
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_service_box a {
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_media_box {
+  margin-left: 55px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_box .footer_media_main {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_media_box .media_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .media_box i {
+  margin-right: 28px;
+}
+
+.footer_frame .footer_media_box .footer_mobile_main {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .footer_mobile_main .mobile_boxes {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_frame .mobile_boxes .mobile_box {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .mobile_box img {
+  position: relative;
+  top: 10px;
+  margin-right: 20px;
+  width: 24px;
+  height: 16px;
+}
+
+.footer_frame .mobile_box span {
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_media_main .card_box {
+  width: 272px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .container .footer_bottom {
+  margin-top: 90px;
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  border-top: 1px solid #eaeaea;
+}
+
+.footer_frame .footer_bottom .footer_main {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_main .footer_bottom_left {
+  width: 940px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_frame .footer_bottom_left span {
+  width: 280px;
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_main .footer_bottom_right {
+  width: 400px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer_frame .footer_bottom_right .footer_select_box {
+  padding: 10px 20px;
+  width: 187px;
+  height: 40px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-sizing: border-box;
+
+  border-radius: 6px;
+  border: 1px solid #eaeaea;
+  background: #fff;
+}
+
+.footer_frame .footer_select_box span {
+  color: #626974;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.footer_frame .footer_select_box select {
+  margin-left: 20px;
+  width: 70px;
+  height: 100%;
+
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+
+  color: #041e42;
+  font-family: "Jost";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
