--- a/public/css/home (2).css
+++ b/public/css/home (2).css
@@ -214,7 +214,7 @@
 .container .review_box span {
   margin-left: 10px;
 
-  font-family: Jost;
+  font-family: "Jost";
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -880,12 +880,15 @@ color: #041e42;
   height: auto;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .tv_frame .container {
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
 }
 
@@ -923,6 +926,140 @@ color: #041e42;
 .tv_product_box .product_img {
   width: 100%;
   height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Event section */
+.home_page .event_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: 632px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  background-image: url("../images/icons/event_bg.png");
+  background-size: cover;
+}
+
+.event_frame .container {
+  flex-direction: column;
+  justify-content: center;
+}
+
+.event_frame .container .event_content_box {
+  width: 340px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.event_frame .event_content_box .event_content_title {
+  color:  #fff;
+  font-family: "Jost";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.event_frame .event_content_box .timer_wrapper {
+  margin: 30px 0px;
+  display: flex;
+  flex-direction: row;
+}
+
+.event_frame .timer_wrapper .timer_box {
+  width: 85px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.event_frame .timer_box strong {
+  color:  #fff;
+  font-family: "Jost";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.event_frame .timer_box span {
+  color:  #fff;
+  font-family: "Jost";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+.event_frame .event_content_box a {
+  width: 140px;
+  height: 50px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 6px;
+  border: 1px solid  #fff;
+  background:  #fff;
+
+  color:  #041e42;
+  text-align: center;
+  font-family: "Jost";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.event_frame .event_product_wrapper {
+  width: 930px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.event_frame .event_product_wrapper .event_product_boxes {
+  position: relative;
+  width: auto;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.event_frame .event_product_boxes .event_product_box {
+  margin-right: 8px;
+  width: 205px;
+  height: 392px;
+
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 6px;
+  background:  #fff;
+}
+
+.event_frame .event_product_box .event_product_image {
+  width: 100%;
+  height: 220px;
 
   display: flex;
   flex-direction: row;
