--- a/public/css/command.css
+++ b/public/css/command.css
@@ -333,7 +333,7 @@ p {
 }
 
 .footer_frame .container {
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .footer_frame .container .footer_top {
