--- a/public/css/home (2).css
+++ b/public/css/home (2).css
@@ -1,7 +1,7 @@
 .home_page {
   padding-bottom: 60px;
   display: flex;
-  flex-direction: column;
+  flex-direction: center;
 }
 
 .container .category_top {
@@ -111,7 +111,7 @@
 }
 
 .container .next_prev_box img {
-  position: absolute;
+  position: relative;
   top: 50%;
   cursor: pointer;
 }
