--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,8 +1,8 @@
-:root (
- --font: "Jost"
-)
+:root {
+  --font: "jost";
+}
 
-html
+html,
 body {
   margin: 0;
   padding: 0;
@@ -56,10 +56,6 @@ p {
   margin-right: 76px;
   margin-top: 10px;
   height: 36px;
-
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
 }
 
 .navbar_frame .navbar_top .nav_search_frame {
@@ -310,33 +306,36 @@ p {
   color: #ffffff;
 }
 
-/* Footer section */
+/* FOOTER */
+
 .footer_frame {
   position: relative;
-  padding: 90px 0px 20px 0px;
+  padding: 90px 0 20px;
   width: 100%;
   height: auto;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
+
   background: #f3f5f6;
 }
 
-.footer_frame .footer_spec_title {
+.footer_spec_title {
+  display: block;
   margin-bottom: 30px;
-  color:  #041e42;
+  color: #041e42;
   font-family: var(--font);
   font-size: 18px;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  line-height: 26px;
 }
 
 .footer_frame .container {
-  flex-direction: row;
+  flex-direction: column;
 }
 
-.footer_frame .container .footer_top {
+.container .footer_top {
   width: 100%;
   height: auto;
 
@@ -344,128 +343,114 @@ p {
   flex-direction: row;
 }
 
-.footer_frame .footer_top .footer_contact_box {
+.footer_top .footer_contect_box {
   display: flex;
   flex-direction: column;
 }
 
-.footer_frame .footer_contact_box .footer_contact_main {
-  margin-bottom: 30px;
+.footer_contect_box .footer_contact_main {
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
 }
 
-.footer_frame .footer_contact_main img {
-  position: relative;
-  margin-right: 30px;
-  top: 5px;
+.footer_contact_main img {
   width: 35px;
   height: 30px;
 }
 
-.footer_frame .footer_contact_main div {
+.footer_contact_main div {
+  margin-left: 30px;
   display: flex;
   flex-direction: column;
 }
 
-.footer_frame .footer_contact_main div strong {
-  margin-bottom: 10px;
+.footer_contact_main div strong {
   color: #041e42;
   font-family: var(--font);
   font-size: 15px;
-  font-style: normal;
   font-weight: 500;
   line-height: 22px;
 }
 
-.footer_frame .footer_contact_main div strong {
+.footer_contact_main div span {
+  margin-top: 10px;
   color: #041e42;
   font-family: var(--font);
   font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 22px;
 }
 
-.footer_frame .footer_contact_main div span {
-  color: #041e42;
-  font-family: var(--font);
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-}
-
-.footer_frame .footer_service_box {
+.footer_support_box {
   margin-left: 60px;
   display: flex;
   flex-direction: column;
 }
 
-.footer_frame .footer_service_box a {
-  color: #041e42;
+.footer_support_box a {
+  color: rgb(4, 30, 66);
   font-family: var(--font);
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 40px;
 }
 
-.footer_frame .footer_media_box {
+.footer_media_box {
   margin-left: 55px;
   display: flex;
   flex-direction: column;
 }
 
-.footer_frame .footer_media_box .footer_media_main {
+.footer_media_box .footer_media_main {
   display: flex;
   flex-direction: column;
 }
 
-.footer_frame .footer_media_box .media_box {
+.footer_media_main .media_box {
+  margin-bottom: 30px;
   display: flex;
   flex-direction: row;
 }
 
-.footer_frame .media_box i {
-  margin-right: 28px;
+.media_box i {
+  margin-right: 25px;
 }
 
-.footer_frame .footer_media_box .footer_mobile_main {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-}
-
-.footer_frame .footer_mobile_main .mobile_boxes {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.footer_frame .mobile_boxes .mobile_box {
+.footer_media_main .mobile_app_box {
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
-.footer_frame .mobile_box img {
-  position: relative;
-  top: 10px;
-  margin-right: 20px;
+.mobile_app_box img {
   width: 24px;
   height: 16px;
 }
 
-.footer_frame .mobile_box span {
-  color: #041e42;
+.mobile_app_box span {
+  margin-left: 20px;
+  color: rgb(4, 30, 66);
   font-family: var(--font);
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 40px;
 }
 
-.footer_frame .footer_media_main .card_box {
+.footer_card_box {
+  margin-left: 55px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_card_box .footer_card_main {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_card_main .card_box {
   width: 272px;
 
   display: flex;
@@ -473,18 +458,20 @@ p {
   justify-content: space-between;
 }
 
-.footer_frame .container .footer_bottom {
+.container .footer_bottom {
   margin-top: 90px;
+  margin-bottom: 60px;
   width: 100%;
   height: 60px;
 
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+
   border-top: 1px solid #eaeaea;
 }
 
-.footer_frame .footer_bottom .footer_main {
+.footer_bottom .footer_main {
   width: 100%;
   height: auto;
 
@@ -492,7 +479,7 @@ p {
   flex-direction: row;
 }
 
-.footer_frame .footer_main .footer_bottom_left {
+.footer_main .footer_bottom_left {
   width: 940px;
   height: auto;
 
@@ -500,18 +487,17 @@ p {
   flex-direction: row;
 }
 
-.footer_frame .footer_bottom_left span {
-  width: 280px;
-  color: #041e42;
+.footer_bottom_left span {
+  margin-right: 60px;
+  color: rgb(4, 30, 66);
   font-family: var(--font);
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 40px;
 }
 
-.footer_frame .footer_main .footer_bottom_right {
-  width: 400px;
+.footer_main .footer_bottom_right {
+  width: 450px;
   height: auto;
 
   display: flex;
@@ -519,43 +505,73 @@ p {
   justify-content: space-between;
 }
 
-.footer_frame .footer_bottom_right .footer_select_box {
+.footer_bottom_right .footer_select_box {
   padding: 10px 20px;
-  width: 187px;
+  width: 220px;
   height: 40px;
 
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+
   box-sizing: border-box;
 
+  border: 1px solid rgb(234, 234, 234);
   border-radius: 6px;
-  border: 1px solid #eaeaea;
-  background: #fff;
+
+  background: rgb(255, 255, 255);
 }
 
-.footer_frame .footer_select_box span {
-  color: #626974;
+.footer_select_box span {
+  color: rgb(98, 105, 116);
   font-family: var(--font);
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 40px;
 }
 
-.footer_frame .footer_select_box select {
+.footer_select_box select {
   margin-left: 20px;
   width: 70px;
-  height: 100%;
+  height: 90%;
 
+  background: none;
   border: none;
   outline: none;
-  background: none;
   cursor: pointer;
 
-  color: #041e42;
+  color: rgb(4, 30, 66);
   font-family: var(--font);
   font-size: 14px;
+  font-weight: 400;
+}
+
+/* PAGE ROUTER*/
+.page_router {
+  margin: 20px 0;
+  width: 1320px;
+}
+
+.page_router span {
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+
+  color: #041e42;
+}
+
+.page_router span.drop {
+  margin: 0px 10px;
+}
+
+.page_router span.active {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+
+  color: #626974;
 }
