--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,9 @@
 /* MYPAGE */
 
 .home_page {
-  padding-bottom: 60px;
   display: flex;
   flex-direction: column;
-} 
+}
 
 .container .category_top {
   width: 100%;
@@ -17,42 +16,248 @@
 }
 
 .container .category_top span {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
   line-height: 40px;
-  text-transform: capitalize;
   color: #041e42;
+  text-transform: capitalize;
+}
+
+.container .category_top div {
+  display: flex;
+  flex-direction: row;
 }
 
 .container .category_top a {
-  font-family: "JOST";
+  margin-left: 30px;
+
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 22px;
-  text-transform: capitalize;
   color: #041e42;
+  text-transform: capitalize;
 }
 
 .container .category_top a:hover {
   border-bottom: 2px solid #041e42;
 }
 
-.container .category_top a {
-  font-family: "JOST";
+/* PAGINATION */
+
+.container .pagionation_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .pagionation_box .pagination_main {
+  width: auto;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pagination_main img {
+  cursor: pointer;
+}
+
+.container .pagination_main .pagination_dot {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.container .pagination_dot .dot {
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.container .pagination_dot .dot.active {
+  border: 2px solid #112137;
+}
+
+.container .pagination_dot .dot div {
+  width: 4px;
+  height: 4px;
+  background-color: #112137;
+}
+
+/* HOVER_BORDER */
+
+.container .hover_border {
+  margin-top: 3px;
+  width: 32px;
+  height: 2px;
+
+  background: #041e42;
+}
+
+.container .next_prew_box {
+  width: 25px;
+}
+
+.container .next_prew_box img {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+
+/* PRODUCT BOX */
+
+.container .prodact_boxes {
+  position: relative;
+  width: 1224px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.container .prodact_boxes .prodact_box {
+  width: 306px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.container .prodact_box .prodact_img_box {
+  width: 100%;
+  height: 280px;
+}
+
+.container .prodact_img_box .hover_box {
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container .hover_box button {
+  width: 260px;
+  height: 50px;
+  margin-bottom: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+
+  background-color: #0053f6;
+  box-shadow: 0px 5px 20px rgb(o, 83, 246, 0.1);
+  border-radius: 6px;
+
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 22px;
+  color: #ffffff;
+}
+
+.container .prodact_img_box:hover .hover_box {
+  display: flex;
+}
+
+.container .prodact_content_box {
+  padding: 5px 22px;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.container .prodact_content_box .prodact_title {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #626974;
+}
+
+.container .prodact_content_box .product_desc {
+  margin-top: 7px;
+  height: 56px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  overflow: hidden;
+
   color: #041e42;
 }
 
-.container .category_top a:hover {
-  border-bottom: 2px solid #041e42;
+.container .prodact_content_box .review_box {
+  margin-top: 7px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
+.container .review_box img {
+  margin-right: 5px;
+}
+
+.container .review_box span {
+  margin-left: 10px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #626974;
+}
+
+.container .prodact_content_box .price_box {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .price_box strong {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.container .price_box span {
+  margin-left: 10px;
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration: line-through;
+  color: #626974;
+}
+
+/* HOME PAGE */
 
 .home_page .header_frame {
   position: relative;
@@ -96,7 +301,7 @@
   border-radius: 6px;
 
   color: rgb(4, 30, 66);
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-size: 13px;
   font-weight: 500;
@@ -108,7 +313,7 @@
   width: 428px;
 
   color: #ffffff;
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-size: 60px;
   font-weight: 400;
@@ -117,7 +322,7 @@
 
 .home_page .header_content p {
   margin-top: 10px;
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-size: 16px;
   font-weight: 400;
@@ -136,7 +341,7 @@
   background: #ffffff;
   border-radius: 6px;
 
-  font-family: "JOST";
+  ffont-family: var(--font);
   font-style: normal;
   font-size: 15px;
   font-weight: 500;
@@ -178,7 +383,7 @@
 }
 
 .home_page .box_left span {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -189,7 +394,7 @@
 
 .home_page .box_left p {
   margin: 10px 0;
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -199,20 +404,12 @@
 }
 
 .home_page .box_left a {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 22px;
   color: #041e42;
-}
-
-.home_page .box_left .hover_border {
-  margin-top: 3px;
-  width: 32px;
-  height: 2px;
-
-  background: #041e42;
 }
 
 .home_page .header_box .box_rieght {
@@ -262,7 +459,7 @@
 }
 
 .service_frame .service_content span {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -272,7 +469,7 @@
 
 .service_frame .service_content p {
   width: 180px;
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -307,7 +504,7 @@
 }
 
 .shop_category_frame .category_top span {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -316,7 +513,7 @@
 }
 
 .shop_category_frame .category_top a {
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -362,7 +559,7 @@
 .shop_category_frame .category_box span {
   margin-top: 15px;
 
-  font-family: "JOST";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -371,7 +568,8 @@
   text-align: center;
 }
 
-/* Selling Products */
+/* SELLING PRODUCT */
+
 .selling_products_frame {
   position: relative;
   margin-top: 60px;
@@ -389,7 +587,7 @@
 
 .selling_products_frame .container .product_wrapper {
   position: relative;
-  margin-top: 31px;
+  margin-top: 30px;
   width: 100%;
   height: auto;
 
@@ -398,156 +596,14 @@
   justify-content: space-between;
 }
 
-.selling_products_frame .product_wrapper .prev_next_box {
+.selling_products_frame .product_wrapper .next_prew_box {
   width: 25px;
 }
 
-.selling_products_frame .prev_next_box img {
+.selling_products_frame .next_prew_box img {
   position: absolute;
   top: 50%;
   cursor: pointer;
-}
-
-.selling_products_frame .product_wrapper .product_boxes {
-  position: relative;
-  width: 1224px;
-  height: 452px;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.selling_products_frame .product_boxes .product_box {
-  position: relative;
-  width: 306px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.selling_products_frame .product_box .product_image_box {
-  width: 100%;
-  height: 280px;
-  cursor: pointer;
-}
-
-.selling_products_frame .product_image_box .hover_box {
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.selling_products_frame .hover_box button {
-  margin-bottom: 10px;
-  width: 260px;
-  height: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border: none;
-  outline: none;
-  border-radius: 6px;
-  background: #0053f6;
-  box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
-
-  color: var(--Bg-White, #fff);
-  text-align: center;
-  font-family: Jost;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 22px;
-}
-.selling_products_frame .product_image_box:hover .hover_box {
-  display: flex;
-}
-
-.selling_products_frame .product_box .product_box_content {
-  padding: 5px 22px;
-  width: 100%;
-  height: auto;
-  box-sizing: border-box;
-}
-
-.selling_products_frame .product_box_content .product_title {
-  color: var(--Color-Text-Light, #626974);
-  font-family: Jost;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  text-transform: uppercase;
-}
-
-.selling_products_frame .product_box_content .product_description {
-  margin-top: 7px;
-  height: 56px;
-  color: rgb(4, 30, 66);
-  font-family: Jost;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 28px;
-  letter-spacing: 0%;
-  text-align: left;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.selling_products_frame .product_box_content .review_box {
-  margin-top: 7px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.selling_products_frame .review_box img {
-  margin-right: 5px;
-}
-
-.selling_products_frame .review_box span {
-  margin-left: 10px;
-  color: var(--Color-Text-Light, #626974);
-  font-family: Jost;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-}
-
-.selling_products_frame .product_box_content .price_box {
-  margin-top: 10px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.selling_products_frame .price_box strong {
-  color: var(--Color-Text-Dark, #041e42);
-  font-family: Jost;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.selling_products_frame .price_box span {
-  margin-left: 10px;
-  color: var(--Color-Text-Light, #626974);
-  font-family: Jost;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  text-decoration-line: line-through;
 }
 
 .home_page .adv_frame {
@@ -560,11 +616,414 @@
   justify-content: center;
   align-items: center;
 
-  background-color: #e5eeff;
-  color: #0053f6;
-  font-family: Jost;
-  font-size: 18px;
+  background-color: #e5edff;
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  font-size: 18px;
+  line-height: 26px;
+  color: #0053f6;
+}
+
+/* SPEC PRODACT */
+
+.home_page .spec_prodact_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.spec_prodact_frame .container {
+  flex-direction: column;
+}
+
+.spec_prodact_frame .container .spec_prodact_wrapper {
+  position: relative;
+  margin-top: 35px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.spec_prodact_wrapper .big_prodact_box {
+  position: relative;
+  padding: 30px;
+  width: 664px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+
+  box-sizing: border-box;
+  background-color: #f3f5f6;
+  border-radius: 6px;
+}
+
+.big_prodact_box .big_prodact_content {
+  width: 160px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.big_prodact_content span {
+  margin: 7px 0;
+
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.big_prodact_content p {
+  margin: 7px 0;
+
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 38px;
+  color: #041e42;
+}
+
+.big_prodact_content a {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #041e42;
+}
+
+.big_prodact_box img {
+  position: absolute;
+  width: 322px;
+  height: 309px;
+  right: 5%;
+}
+
+.spec_prodact_wrapper .small_prodact_wrapper {
+  margin-left: 30px;
+  width: 620px;
+  height: 368;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+}
+
+.small_prodact_wrapper .small_prodact_box {
+  position: relative;
+  padding: 30px;
+  width: 293px;
+  height: 170px;
+
+  display: flex;
+  flex-direction: row;
+
+  box-sizing: border-box;
+  background: #f3f5f6;
+  border-radius: 6px;
+}
+
+.spec_prodact_frame .small_prodact_box:nth-child(odd) {
+  margin-right: 30px;
+}
+
+.spec_prodact_frame .small_prodact_box .small_prodact_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.spec_prodact_frame .small_prodact_content strong {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: #041e42;
+}
+
+.spec_prodact_frame .small_prodact_content span {
+  font-family: var(--font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+  color: #626974;
+}
+
+.spec_prodact_frame .small_prodact_box img {
+  position: absolute;
+  right: 30px;
+}
+
+.spec_prodact_frame .small_prodact_box .img_3 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.spec_prodact_frame .small_prodact_box .img_4 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+/* Tv frame */
+
+.home_page .tv_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tv_frame .container {
+  flex-direction: column;
+}
+
+.container .tv_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tv_product_box .product_img {
+  width: 100%;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+/* TOP DEALS */
+
+.top_deals_frame {
+  position: relative;
+  margin-top: 60px;
+  width: 100%;
+  height: 592px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #0053f6;
+  background-image: url(../images/icons/header_bg.svg);
+  background-size: cover;
+}
+
+.top_deals_frame .container {
+  flex-direction: row;
+}
+
+.top_deals_frame .container .top_deals_main {
+  position: relative;
+  width: 1320px;
+  height: 392px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.top_deals_frame .top_deals_main .top_deal_content {
+  position: relative;
+  margin-right: 15px;
+  width: 334px;
+  height: 214px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.top_deals_frame .top_deal_content strong {
+  margin-bottom: 20px;
+  color: rgb(255, 255, 255);
+  font-family: var(--font);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 40px;
+  text-align: left;
+}
+
+.top_deals_frame .top_deal_content .deal_content_boxes {
+  position: relative;
+  width: 334px;
+  height: 62px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.top_deals_frame .deal_content_boxes .deal_content_box {
+  position: relative;
+  width: 53px;
+  height: 62px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.top_deals_frame .deal_content_box span {
+  color: rgb(255, 255, 255);
+  font-family: var(--font);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 40px;
+  text-align: left;
+}
+
+.top_deals_frame .deal_content_box p {
+  color: rgb(255, 255, 255);
+  font-family: var(--font);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+}
+
+.top_deals_frame .top_deal_content .show_bottom {
+  position: relative;
+  margin-top: 30px;
+  width: 142px;
+  height: 52px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  box-sizing: border-box;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 6px;
+
+  background: rgb(245, 195, 75);
+}
+
+.top_deals_frame .show_bottom button {
+  position: relative;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  color: rgb(4, 30, 66);
+  font-family: var(--font);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+
+  box-sizing: border-box;
+  border-radius: 6px;
+  border: none;
+  background: rgb(245, 195, 75);
+}
+
+.top_deals_frame .top_deals_main .deal_info_content {
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.top_deals_frame .deal_info_content .deal_info_content_boxes {
+  position: relative;
+  margin-right: 20px;
+  left: 10px;
+  width: 210px;
+  height: 392px;
+
+  display: flex;
+  flex-direction: column;
+
+  border-radius: 6px;
+  background: rgb(255, 255, 255);
+}
+
+.top_deals_frame .deal_info_content_boxes .deal_img_boxes {
+  position: relative;
+  width: 100%;
+  height: 220px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: rgb(255, 255, 255);
+}
+
+.top_deals_frame .deal_img_boxes .deal_img_border_box {
+  position: relative;
+  width: 169px;
+  height: 190px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px dashed rgb(203, 200, 200);
+}
+
+.top_deals_frame .deal_img_border_box img {
+  position: relative;
+  width: 100%;
+  display: flex;
+}
+
+.top_deals_frame .deal_info_content_boxes .deal_info_img_boxes {
+  position: relative;
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
